// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/SideMenu/ProjectSelector render snap when clicked more projects button 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-single ant-select-show-arrow"
      searchinputref="[object Object]"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_-1"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <svg
          class="custom-icon-right-arrow-select-suffix"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden custom-select-popup-wrapper ant-select-dropdown-empty ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; padding: 0px; width: 240px; min-width: 0; pointer-events: none;"
    >
      <div>
        <div
          class="css-h34pqn"
        >
          <span
            class="ant-input-affix-wrapper basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless"
          >
            <input
              class="ant-input ant-input-borderless"
              placeholder="搜索"
              type="text"
              value="search value"
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-clear-icon"
                role="button"
                tabindex="-1"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="select-options-group-label"
          >
            最近打开的项目
          </div>
          <div
            class="css-15pnbqu"
          >
            <div
              class="ant-select-item-empty"
              id="rc_select_TEST_OR_SSR_list"
              role="listbox"
            >
              <div
                class="ant-empty is-icon-tips css-19kysfv"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    fill="none"
                    height="80"
                    viewBox="0 0 80 80"
                    width="80"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_1412_15009)"
                    >
                      <path
                        d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                        fill="#EBEAE7"
                      />
                      <path
                        d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                        fill="#F2F1EF"
                      />
                      <path
                        d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                        fill="#E6E4E3"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0_1412_15009"
                      >
                        <rect
                          fill="white"
                          height="80"
                          width="80"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  <span
                    class="no-data-cont"
                  >
                    暂无项目
                  </span>
                </div>
                <div
                  class="ant-empty-footer"
                />
              </div>
            </div>
          </div>
          <div
            class="select-options-group-label"
          >
            您所属的项目
          </div>
          <div
            class="ant-empty is-icon-tips css-19kysfv"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                fill="none"
                height="80"
                viewBox="0 0 80 80"
                width="80"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_1412_15009)"
                >
                  <path
                    d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                    fill="#EBEAE7"
                  />
                  <path
                    d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                    fill="#F2F1EF"
                  />
                  <path
                    d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                    fill="#E6E4E3"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_1412_15009"
                  >
                    <rect
                      fill="white"
                      height="80"
                      width="80"
                    />
                  </clippath>
                </defs>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              <span
                class="no-data-cont"
              >
                暂无项目
              </span>
            </div>
            <div
              class="ant-empty-footer"
            />
          </div>
          <div
            class="show-more-project-wrapper"
          >
            <a
              href="/project"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  查看更多项目
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/ProjectSelector render snap when closed select dropdown 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-single ant-select-show-arrow"
      searchinputref="[object Object]"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_-1"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <svg
          class="custom-icon-right-arrow-select-suffix"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden custom-select-popup-wrapper ant-select-dropdown-empty ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; padding: 0px; width: 240px; min-width: 0; pointer-events: none;"
    >
      <div>
        <div
          class="css-h34pqn"
        >
          <span
            class="ant-input-affix-wrapper basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless"
          >
            <input
              class="ant-input ant-input-borderless"
              placeholder="搜索"
              type="text"
              value="search value"
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-clear-icon"
                role="button"
                tabindex="-1"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="select-options-group-label"
          >
            最近打开的项目
          </div>
          <div
            class="css-15pnbqu"
          >
            <div
              class="ant-select-item-empty"
              id="rc_select_TEST_OR_SSR_list"
              role="listbox"
            >
              <div
                class="ant-empty is-icon-tips css-19kysfv"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    fill="none"
                    height="80"
                    viewBox="0 0 80 80"
                    width="80"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_1412_15009)"
                    >
                      <path
                        d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                        fill="#EBEAE7"
                      />
                      <path
                        d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                        fill="#F2F1EF"
                      />
                      <path
                        d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                        fill="#E6E4E3"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0_1412_15009"
                      >
                        <rect
                          fill="white"
                          height="80"
                          width="80"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  <span
                    class="no-data-cont"
                  >
                    暂无项目
                  </span>
                </div>
                <div
                  class="ant-empty-footer"
                />
              </div>
            </div>
          </div>
          <div
            class="select-options-group-label"
          >
            您所属的项目
          </div>
          <div
            class="ant-empty is-icon-tips css-19kysfv"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                fill="none"
                height="80"
                viewBox="0 0 80 80"
                width="80"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_1412_15009)"
                >
                  <path
                    d="M0 56.5643C0 61.4398 17.8769 65.3152 40.0043 65.3152C62.1316 65.3152 80.0086 61.4398 80.0086 56.5643C80.0086 51.6887 62.1317 47.8134 40.0043 47.8134C17.8768 47.8134 0 51.6888 0 56.5643Z"
                    fill="#EBEAE7"
                  />
                  <path
                    d="M52.0055 35.1869C52.0055 33.1867 53.2557 31.5615 54.7558 31.5615H68.7573V54.189C68.7573 56.8142 67.1322 59.0645 65.132 59.0645H15.0016C13.0014 59.0645 11.2512 56.9393 11.2512 54.189V31.5615H25.2527C26.7528 31.5615 28.003 33.1867 28.003 35.1869C28.003 37.1871 29.2531 38.8123 30.7533 38.8123H49.2553C50.7554 38.8123 52.0055 37.1871 52.0055 35.1869Z"
                    fill="#F2F1EF"
                  />
                  <path
                    d="M56.6311 16.56C56.0061 15.4349 55.0059 14.8098 53.6308 14.6848H26.3779C25.1277 14.8098 24.0026 15.4349 23.5026 16.56L10.6262 30.9365V54.189C10.6262 57.1893 12.5014 59.6896 15.0016 59.6896H65.007C67.3823 59.6896 69.2575 57.1893 69.2575 54.189V30.9365L56.6311 16.56ZM24.3777 17.3101C24.8777 16.435 25.5028 16.0599 26.3779 15.935H53.6308C54.5059 15.935 55.131 16.435 55.506 17.1851L67.6323 30.9365H54.7559C52.8807 30.9365 51.3805 32.8117 51.3805 35.187C51.3805 36.8122 50.3804 38.1873 49.2553 38.1873H30.7533C29.5032 38.1873 28.6281 36.8122 28.6281 35.187C28.6281 32.8117 27.128 30.9365 25.2528 30.9365H12.3763L24.3777 17.3101ZM68.1323 54.189C68.1323 56.4393 66.7572 58.4395 65.132 58.4395H15.0016C13.2515 58.4395 11.8763 56.5643 11.8763 54.189V32.1867H25.2528C26.3779 32.1867 27.378 33.5618 27.378 35.312C27.378 37.6873 28.8781 39.5625 30.7533 39.5625H49.2553C51.1306 39.5625 52.6307 37.6873 52.6307 35.312C52.6307 33.6868 53.6308 32.3117 54.7559 32.3117H68.0073V54.189H68.1323Z"
                    fill="#E6E4E3"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_1412_15009"
                  >
                    <rect
                      fill="white"
                      height="80"
                      width="80"
                    />
                  </clippath>
                </defs>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              <span
                class="no-data-cont"
              >
                暂无项目
              </span>
            </div>
            <div
              class="ant-empty-footer"
            />
          </div>
          <div
            class="show-more-project-wrapper"
          >
            <a
              href="/project"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  查看更多项目
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/ProjectSelector render snap when has data 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-single ant-select-show-arrow"
      searchinputref="[object Object]"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
        >
          <span
            class="custom-select-option-content css-vgjuov"
          >
            <span
              class="custom-select-option-content-prefix"
            >
              <span>
                prefix node
              </span>
            </span>
            <span
              class="custom-select-option-content-label"
            >
              test1
            </span>
          </span>
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <svg
          class="custom-icon-right-arrow-select-suffix"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/ProjectSelector render snap when has data 2`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-single ant-select-show-arrow ant-select-open"
      searchinputref="[object Object]"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
        >
          <span
            class="custom-select-option-content css-vgjuov"
          >
            <span
              class="custom-select-option-content-prefix"
            >
              <span>
                prefix node
              </span>
            </span>
            <span
              class="custom-select-option-content-label"
            >
              test1
            </span>
          </span>
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <svg
          class="custom-icon-right-arrow-select-suffix"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up custom-select-popup-wrapper ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; padding: 0px; width: 240px; min-width: 0;"
    >
      <div>
        <div
          class="css-h34pqn"
        >
          <span
            class="ant-input-affix-wrapper basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless"
          >
            <input
              class="ant-input ant-input-borderless"
              placeholder="搜索"
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                role="button"
                tabindex="-1"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="select-options-group-label"
          >
            最近打开的项目
          </div>
          <div
            class="css-15pnbqu"
          >
            <div
              id="rc_select_TEST_OR_SSR_list"
              role="listbox"
              style="height: 0px; width: 0px; overflow: hidden;"
            >
              <div
                aria-label="test1"
                aria-selected="true"
                id="rc_select_TEST_OR_SSR_list_0"
                role="option"
              >
                1
              </div>
              <div
                aria-label="test2"
                aria-selected="false"
                id="rc_select_TEST_OR_SSR_list_1"
                role="option"
              >
                2
              </div>
            </div>
            <div
              class="rc-virtual-list"
              style="position: relative;"
            >
              <div
                class="rc-virtual-list-holder"
                style="max-height: 256px; overflow-y: hidden;"
              >
                <div>
                  <div
                    class="rc-virtual-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-selected="true"
                      class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                      title="test1"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test1
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                    <div
                      aria-selected="false"
                      class="ant-select-item ant-select-item-option"
                      title="test2"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test2
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                    <div
                      aria-selected="false"
                      class="ant-select-item ant-select-item-option"
                      title="test3"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test3
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="select-options-group-label"
          >
            您所属的项目
          </div>
          <div
            class="css-11lv9el"
          >
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <svg
                    height="18"
                    viewBox="64 64 896 896"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32M332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332zm460 600H232V536h560zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0"
                    />
                  </svg>
                  <span
                    class="project-selector-label-text"
                  >
                    test1
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <svg
                    class="project-flag-icon"
                    color="currentColor"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="project-selector-label-text"
                  >
                    test2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="show-more-project-wrapper"
          >
            <a
              href="/project"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  查看更多项目
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/ProjectSelector render snap when has data 3`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-focused ant-select-single ant-select-show-arrow ant-select-open"
      searchinputref="[object Object]"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
        >
          <span
            class="custom-select-option-content css-vgjuov"
          >
            <span
              class="custom-select-option-content-prefix"
            >
              <span>
                prefix node
              </span>
            </span>
            <span
              class="custom-select-option-content-label"
            >
              test1
            </span>
          </span>
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <svg
          class="custom-icon-right-arrow-select-suffix"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown custom-select-popup-wrapper ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; padding: 0px; width: 240px; min-width: 0;"
    >
      <div>
        <div
          class="css-h34pqn"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-focused basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless"
          >
            <input
              class="ant-input ant-input-borderless"
              placeholder="搜索"
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                role="button"
                tabindex="-1"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="select-options-group-label"
          >
            最近打开的项目
          </div>
          <div
            class="css-15pnbqu"
          >
            <div
              id="rc_select_TEST_OR_SSR_list"
              role="listbox"
              style="height: 0px; width: 0px; overflow: hidden;"
            >
              <div
                aria-label="test1"
                aria-selected="true"
                id="rc_select_TEST_OR_SSR_list_0"
                role="option"
              >
                1
              </div>
              <div
                aria-label="test2"
                aria-selected="false"
                id="rc_select_TEST_OR_SSR_list_1"
                role="option"
              >
                2
              </div>
            </div>
            <div
              class="rc-virtual-list"
              style="position: relative;"
            >
              <div
                class="rc-virtual-list-holder"
                style="max-height: 256px; overflow-y: hidden;"
              >
                <div>
                  <div
                    class="rc-virtual-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-selected="true"
                      class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                      title="test1"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test1
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                    <div
                      aria-selected="false"
                      class="ant-select-item ant-select-item-option"
                      title="test2"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test2
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                    <div
                      aria-selected="false"
                      class="ant-select-item ant-select-item-option"
                      title="test3"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test3
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="select-options-group-label"
          >
            您所属的项目
          </div>
          <div
            class="css-11lv9el"
          >
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <svg
                    height="18"
                    viewBox="64 64 896 896"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32M332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332zm460 600H232V536h560zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0"
                    />
                  </svg>
                  <span
                    class="project-selector-label-text"
                  >
                    test1
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <svg
                    class="project-flag-icon"
                    color="currentColor"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="project-selector-label-text"
                  >
                    test2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="show-more-project-wrapper"
          >
            <a
              href="/project"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  查看更多项目
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/ProjectSelector render snap when has data 4`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-focused ant-select-single ant-select-show-arrow ant-select-open"
      searchinputref="[object Object]"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
        >
          <span
            class="custom-select-option-content css-vgjuov"
          >
            <span
              class="custom-select-option-content-prefix"
            >
              <span>
                prefix node
              </span>
            </span>
            <span
              class="custom-select-option-content-label"
            >
              test1
            </span>
          </span>
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <svg
          class="custom-icon-right-arrow-select-suffix"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown custom-select-popup-wrapper ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; padding: 0px; width: 240px; min-width: 0;"
    >
      <div>
        <div
          class="css-h34pqn"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-focused basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless"
          >
            <input
              class="ant-input ant-input-borderless"
              placeholder="搜索"
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                role="button"
                tabindex="-1"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="select-options-group-label"
          >
            最近打开的项目
          </div>
          <div
            class="css-15pnbqu"
          >
            <div
              id="rc_select_TEST_OR_SSR_list"
              role="listbox"
              style="height: 0px; width: 0px; overflow: hidden;"
            >
              <div
                aria-label="test1"
                aria-selected="true"
                id="rc_select_TEST_OR_SSR_list_0"
                role="option"
              >
                1
              </div>
              <div
                aria-label="test2"
                aria-selected="false"
                id="rc_select_TEST_OR_SSR_list_1"
                role="option"
              >
                2
              </div>
            </div>
            <div
              class="rc-virtual-list"
              style="position: relative;"
            >
              <div
                class="rc-virtual-list-holder"
                style="max-height: 256px; overflow-y: hidden;"
              >
                <div>
                  <div
                    class="rc-virtual-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-selected="true"
                      class="ant-select-item ant-select-item-option ant-select-item-option-selected"
                      title="test1"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test1
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                    <div
                      aria-selected="false"
                      class="ant-select-item ant-select-item-option"
                      title="test2"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test2
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                    <div
                      aria-selected="false"
                      class="ant-select-item ant-select-item-option"
                      title="test3"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test3
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="select-options-group-label"
          >
            您所属的项目
          </div>
          <div
            class="css-11lv9el"
          >
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <svg
                    height="18"
                    viewBox="64 64 896 896"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32M332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332zm460 600H232V536h560zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0"
                    />
                  </svg>
                  <span
                    class="project-selector-label-text"
                  >
                    test1
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <svg
                    class="project-flag-icon"
                    color="currentColor"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="project-selector-label-text"
                  >
                    test2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="show-more-project-wrapper"
          >
            <a
              href="/project"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  查看更多项目
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/ProjectSelector render snap when has data 5`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-focused ant-select-single ant-select-show-arrow ant-select-open"
      searchinputref="[object Object]"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          style="visibility: hidden;"
        >
          <span
            class="custom-select-option-content css-vgjuov"
          >
            <span
              class="custom-select-option-content-prefix"
            >
              <span>
                prefix node
              </span>
            </span>
            <span
              class="custom-select-option-content-label"
            >
              test1
            </span>
          </span>
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <svg
          class="custom-icon-right-arrow-select-suffix"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown custom-select-popup-wrapper ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; padding: 0px; width: 240px; min-width: 0;"
    >
      <div>
        <div
          class="css-h34pqn"
        >
          <span
            class="ant-input-affix-wrapper ant-input-affix-wrapper-focused basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless"
          >
            <input
              class="ant-input ant-input-borderless"
              placeholder="搜索"
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                role="button"
                tabindex="-1"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </span>
          </span>
          <div
            class="select-options-group-label"
          >
            最近打开的项目
          </div>
          <div
            class="css-15pnbqu"
          >
            <div
              id="rc_select_TEST_OR_SSR_list"
              role="listbox"
              style="height: 0px; width: 0px; overflow: hidden;"
            >
              <div
                aria-label="test1"
                aria-selected="true"
                id="rc_select_TEST_OR_SSR_list_0"
                role="option"
              >
                1
              </div>
            </div>
            <div
              class="rc-virtual-list"
              style="position: relative;"
            >
              <div
                class="rc-virtual-list-holder"
                style="max-height: 256px; overflow-y: hidden;"
              >
                <div>
                  <div
                    class="rc-virtual-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-selected="true"
                      class="ant-select-item ant-select-item-option ant-select-item-option-selected"
                      title="test1"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        test1
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="select-options-group-label"
          >
            您所属的项目
          </div>
          <div
            class="css-11lv9el"
          >
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <svg
                    height="18"
                    viewBox="64 64 896 896"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32M332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332zm460 600H232V536h560zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0"
                    />
                  </svg>
                  <span
                    class="project-selector-label-text"
                  >
                    test1
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <svg
                    class="project-flag-icon"
                    color="currentColor"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="project-selector-label-text"
                  >
                    test2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="show-more-project-wrapper"
          >
            <a
              href="/project"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  查看更多项目
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/ProjectSelector render snap when no data 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 ant-select-single ant-select-show-arrow"
      searchinputref="[object Object]"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title=""
        />
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select: none;"
        unselectable="on"
      >
        <svg
          class="custom-icon-right-arrow-select-suffix"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.781 8-3.3-3.3.943-.943L10.667 8l-4.243 4.243-.943-.943z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
</body>
`;
